welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: Missing closing brace `}' assumed here
var ltr : String = ""
^BDR2:5: error: illegal start of statement
 match{
 ^